--- a/src/stylesheets/StartScreen.css
+++ b/src/stylesheets/StartScreen.css
@@ -2,11 +2,6 @@
     to {opacity: 0;}
   }
   
-  @keyframes header-image-animation {
-    25% {opacity: 1;}
-    85%, 100% {opacity: 0; scale: 1.5;}
-  }
-  
   @keyframes fade-in-from-right {
     from {
       opacity: 0;
@@ -25,15 +20,12 @@
     padding: 0 5%;
     height: 100vh;
     background-size: cover;
-    animation: header-image-animation linear forwards;
-    animation-timeline: view();
-    animation-range: exit;
     background-image: url('https://e1.pxfuel.com/desktop-wallpaper/195/1003/desktop-wallpaper-black-grey-gradient-backgrounds-for-web-black-website-background-thumbnail.jpg');
   }
   
   .text-section {
     max-width: 60%;
-    margin-left: 100px;
+    margin-left: 10%;
     display: flex;
     flex-direction: column;
   }
@@ -59,8 +51,8 @@
   }
   
   .text-section p {
-    margin: 5px 0;
-    font-size: 24px;
+    margin: 1% 0;
+    font-size: 1.5rem;
     width: 300px;
   }
   
@@ -72,7 +64,8 @@
   
   .text-section h1 {
     font-size: 3rem;
-    margin: 10px 0;
+    width: 150%;
+    margin: 2% 0;
     color: #898fc7;
     opacity: 0;
     animation: fade-in-from-left 1s ease-in-out forwards;
@@ -87,14 +80,14 @@
   }
   
   .contact-button, .skills a {
-    padding: 10px 20px;
+    padding: 3% 5%;
     background-color: #898fc7;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     justify-content: center;
     font-size: 1.25rem;
-    margin-top: 75px;
+    margin-top: 12%;
     color: #222222;
     font-weight: bold;
     opacity: 0;
@@ -109,27 +102,29 @@
   
   .dividing-line {
     width: 1px;
-    height: 300px;
+    height: 40%;
     border-radius: 20px;
     background-color: white;
     opacity: 0;
     animation: fade-in 1s ease-in-out forwards;
     animation-delay: .5s;
+    margin-left: 15%;
   }
   
   /* Image Section */
   .image-section {
     text-align: center;
     position: relative;
-    margin-right: 150px;
+    margin-right: 6%;
     animation: fade-in 2s ease-in-out;
   }
   
   .profile-image {
     position: relative;
-    width: 450px; /* Adjust to your desired size */
-    height: 450px;
-    border-radius: 50%; /* Makes it circular */
+    margin: auto;
+    width: 78%;
+    height: 78%;
+    border-radius: 50%;
     overflow: hidden;
     display: flex;
     align-items: center;
