--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -1,7 +1,7 @@
 /* Navbar */
 .navbar {
     display: flex;
-    height: 70px;
+    height: 10%;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -23,9 +23,9 @@
   }
 
   .navbar .logo img {
-    width: 60px;
+    width: 12%;
     align-items: center;
-    margin-left: 30px;
+    margin-left: 6%;
     justify-content: center;
     cursor: pointer;
   }
@@ -45,18 +45,16 @@
   }
   
   .nav-links div {
-    padding: 9px 18px;
+    padding: 1.8% 5%;
     color: #ffffff;
     font-weight: bold;
     text-decoration: none;
     font-size: 1.1rem;
-
   }
   
   .nav-links {
-   margin-right: 25px;
+   margin-right: 13%;
    display: flex;
-   
   }
   
   .nav-links div:hover {
