--- a/src/stylesheets/Skills.css
+++ b/src/stylesheets/Skills.css
@@ -64,10 +64,11 @@
     width: 25%;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 2%;
+    padding: 1.5%;
   }
 
   .skills i {
-    margin-right: 10px;
+    margin-right: 3%;
   }
 
