--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -2,23 +2,47 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-top: 40px;
+    padding-top: 4%;
 }
 
 .about-me-text p {
     width: 30%;
     font-size: large;
     text-align: left;
-    margin-top: 20px;
+    margin-top: 1%;
     margin-left: 225px;
 }
 
 .about-header-line {
-    width: 675px;
+    width: 46.5%;
     height: 1px;
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
-    margin-top: 90px;
-    margin-left: 50px;
+    margin-top: 6%;
+    margin-left: 3.5%;
   }
 
+  .slide-in-section {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(20vh);
+    transition: opacity 3s ease-out, transform 1s ease-out;
+    will-change: opacity, visibility;
+  }
+  .slide-in-section.is-visible {
+    opacity: 1;
+    transform: none;
+    visibility: visible;
+  }
+
+  .fade-in-section {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 3s ease-out;
+    will-change: opacity, visibility;
+  }
+  .fade-in-section.is-visible {
+    opacity: 1;
+    transform: none;
+    visibility: visible;
+  }
