--- a/src/stylesheets/Projects.css
+++ b/src/stylesheets/Projects.css
@@ -2,5 +2,92 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-top: 40px;
-}
+    padding-top: 4%; /* Converted from 40px to 4% */
+    color: #ffffff; /* Match the text color with the rest of the webpage */
+  }
+  
+  .projects-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: auto;
+    justify-content: center;
+    padding: 2%; /* Converted from 20px to 2% */
+  }
+
+  .project-card-front h3 {
+    font-size: 2.5rem; /* Converted from 40px to 2.5em */
+  }
+  
+  .project-card {
+    position: relative;
+    margin: auto;
+    width: 67.5%; /* Adjusted width to fit within the container */
+    height: 200px; /* Increased height to make the project card larger */
+    margin-bottom: 5%;
+    border: 1px solid #444; /* Match the border color with the rest of the webpage */
+    border-radius: 10px; /* Match the border radius with the rest of the webpage */
+    overflow: hidden;
+    justify-content: center;
+    background-color: #1a1a1a; /* Match the background color with the rest of the webpage */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .project-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0.4% 0.8% rgba(0, 0, 0, 0.3); /* Converted from 0 4px 8px to 0 0.4% 0.8% */
+  }
+  
+  .project-card-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .project-card-front,
+  .project-card-back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    transition: opacity 0.3s ease;
+  }
+  
+  .project-card-front {
+    display: flex;
+    flex-direction: row;
+    background-color: #191919; /* Match the header background color with the rest of the webpage */
+    color: #ffffff; /* Match the text color with the rest of the webpage */
+    z-index: 1; /* Ensure the front is above the back initially */
+  }
+  
+  .project-card-back {
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #ffffff; /* Match the text color with the rest of the webpage */
+    opacity: 0;
+    z-index: 2; /* Ensure the back is above the front when hovered */
+  }
+  
+  .project-card:hover .project-card-back {
+    opacity: 1;
+  }
+  
+  .project-card:hover .project-card-front {
+    opacity: .5;
+  }
+  
+  .project-logo {
+    width: 10%; /* Use fixed width for consistency */
+    margin-right: 5%;
+  }
+  
+  .project-card-back p {
+    margin: 2% 0;
+  }
