--- a/src/stylesheets/Skills.css
+++ b/src/stylesheets/Skills.css
@@ -64,6 +64,7 @@
     width: 25%;
     justify-content: center;
     align-items: center;
+    margin: auto;
     margin-top: 2%;
     padding: 1.5%;
   }
