--- a/src/stylesheets/StartScreen.css
+++ b/src/stylesheets/StartScreen.css
@@ -20,7 +20,7 @@
     padding: 0 5%;
     height: 100vh;
     background-size: cover;
-    background-image: url('https://e1.pxfuel.com/desktop-wallpaper/195/1003/desktop-wallpaper-black-grey-gradient-backgrounds-for-web-black-website-background-thumbnail.jpg');
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSN8LelNh54lWcMZOnQCoKESOcvTXkufrY-UA&s');
   }
   
   .text-section {
