--- a/src/stylesheets/Projects.css
+++ b/src/stylesheets/Projects.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-top: 4%; /* Converted from 40px to 4% */
+    padding-top: 50px;
     color: #ffffff; /* Match the text color with the rest of the webpage */
   }
   
@@ -54,7 +54,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 3%;
     box-sizing: border-box;
     transition: transform .3s ease-in-out, opacity 0.3s ease;
   }
@@ -92,3 +92,17 @@
   .project-card-back p {
     margin: 2% 0;
   }
+
+  @media screen and (max-width: 768px) {
+    .project-card-front h3 {
+      font-size: 1.75rem; /* Adjusted font size for smaller screens */
+    }
+
+    .project-card {
+      height: 100px;
+    }
+
+    .project-card-back p:first-child {
+      display: none;
+    }
+    }
