--- a/src/stylesheets/ContactBox.css
+++ b/src/stylesheets/ContactBox.css
@@ -14,24 +14,27 @@ form {
     flex-direction: column;
     align-items: center;
     width: 66.5%;
-    height: 525px;
     margin: 0 auto;
     padding: 1rem;
     background-color: #191919;
     border-radius: 50px;
     box-shadow: 0 0 15px 0px #898fc7;
-    margin-bottom: 50px;
-    margin-top: 75px;
+    margin-bottom: 3.5%;
+    margin-top: 60px;
 }
 
 .contact-container h2 {
-    margin: 30px;
+    margin: 3.5%;
+}
+
+form div {
+  width: 80%;
+  margin-right: 5%;
 }
 
 input, textarea {
-    resize: none;
     width: 100%;
-    margin-right: 300px;
+    resize: none;
     padding: 1rem;
     border: 1px solid #333;
     border-radius: 5px;
@@ -40,7 +43,7 @@ input, textarea {
     font-size: 1rem;
     box-sizing: border-box;
     transition: border-color 0.3s ease, background-color 0.3s ease;
-    margin-bottom: 30px;
+    margin-bottom: 6.5%;
   }
 
   textarea {
@@ -70,7 +73,8 @@ input, textarea {
     width: 150px;
     transition: background-color 0.3s ease;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.6);
-    margin-top: 20px;
+    margin-top: 2%;
+    margin-bottom: 2%;
   }
   
   button:hover {
@@ -83,12 +87,7 @@ input, textarea {
     margin-top: -0.5rem;
   }
   
-  /* Responsive Design */
   @media (max-width: 768px) {
-    .main-container {
-      padding: 1.5rem;
-    }
-  
     h2 {
       font-size: 2rem;
     }
