--- a/src/stylesheets/Socials.css
+++ b/src/stylesheets/Socials.css
@@ -6,10 +6,10 @@
     align-items: center;
     gap: 8px;
     background-color: #090909;
-    padding: 20px;
+    padding: 1.5%;
     border-radius: 20px;
-    top: 250px;
-    right: 60px;
+    top: 32%;
+    right: 4%;
     z-index: 100;
     opacity: 0;
     animation: fade-in-from-right 1s ease-in-out forwards;
@@ -47,7 +47,7 @@
 
 .navbar-social-icons a {
     color: #fff;
-    font-size: 48px;
+    font-size: 40px;
     transition: color 0.3s ease;
 }
 
