--- a/src/stylesheets/ContactBox.css
+++ b/src/stylesheets/ContactBox.css
@@ -63,6 +63,7 @@ input, textarea {
   
   button {
     padding: 0.75rem;
+    margin: auto;
     font-size: 1.25rem;
     color: #1a1a1a;
     background-color: #898fc7;
@@ -75,6 +76,7 @@ input, textarea {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.6);
     margin-top: 2%;
     margin-bottom: 2%;
+    align-items: center;
   }
   
   button:hover {
@@ -94,5 +96,9 @@ input, textarea {
   
     button {
       font-size: 1rem;
+    }
+
+    textarea {
+      height: 10%;
     }
   }
