--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -1,7 +1,9 @@
 /* Main.css */
-/* * {
-  border: 1px solid red;
-} */
+* {
+  /* border: 1px solid red; */
+  box-sizing: border-box;
+  max-width: 100vw;
+} 
 
 html {
   scroll-behavior: smooth;
