--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -5,7 +5,7 @@
   max-width: 100vw;
 } 
 
-html {
+html, body {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
@@ -15,6 +15,8 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #101010;
   color: #ffffff;
+  overscroll-behavior-x: none;
+  touch-action: pan-y;
 }
 
 .home {
