--- a/src/stylesheets/Socials.css
+++ b/src/stylesheets/Socials.css
@@ -139,3 +139,14 @@
         display: flex;
     }
 }
+
+@keyframes fade-in-from-right {
+    from {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
